Mon Jan 24 17:00:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/Makefile.am:

	  Fix thinko in pkgsrc *.pc file generation.

Mon Jan 24 18:24:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * examples/IPC_SAP/SPIPE_SAP/consumer_msg.cpp:
        * examples/IPC_SAP/SPIPE_SAP/producer_msg.cpp:
        * examples/IPC_SAP/SPIPE_SAP/producer_read.cpp:
        * examples/IPC_SAP/SPIPE_SAP/server.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.i:

        Added a number necessary includefiles which make things compile better
        when ACE_HAS_STREAM_PIPES is defined.

Mon Jan 24 07:49:21 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/OS_NS_sys_socket.inl (setsockopt): Fixed a mistake in the
	  comment, where it should say "Windows always set
 	  SO_REUSEADDR=1."  Thanks to xjaguar@126.com for reporting this.

Mon Jan 24 11:23:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/CDR_Test.cpp:

        Fixed incorrect initializer for char array.

Sun Jan 23 21:34:00 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Makefile.am:
        * examples/Misc/Makefile.am:
        * tests/Makefile.am:

          Regenerate.

        * m4/ace.m4:

          Added extra quoting to AC_REQUIRE arguments.
          Set BUILD_ACE_{FL,TK,QT,XT}REACTOR automake conditionals.

Sun Jan 23 19:17:25 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* m4/ace.m4:

	  Create new ACE_WITH_{GL,FL,QT,TK} autoconf macros which will be
	  used for finding OpenGL, FL/TK, Qt and Tk libraries and setting
	  compiler and linker flags.

Sun Jan 23 15:45:46 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* m4/ace.m4:

	  Split --enable-{fl,qt,tk,xt}-reactor processing into separate
	  autoconf macros.

Sun Jan 23 15:07:08 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* bin/make_release:

	  Omit .cvsignore files.

Sun Jan 23 18:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
