@@ -1,3 +1,12 @@
+Mon Jan 24 23:10:33 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* ace/Process_Manager.cpp (terminate):
+	* ace/Signal.cpp (remove_handler, register_handler):
+	* ace/Thread_Manager.cpp (spawn_i):
+
+	  Fixed "control reaches end of non-void function" warnings
+	  exhibited by the latest GNU G++ 4.0 CVS snapshot.
+
 Mon Jan 24 17:00:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* ace/Makefile.am:
